AG-46881 Fix snackbar flicker
Squashed commit of the following:

commit 2c48998d4b72c5720add0ba5680a62891f142898
Author: Anatolii Khmarskii <a.khmarskii@adguard.com>
Date:   Fri Nov 28 18:37:09 2025 +0300

    AG-46881 Fix snackbar flicker

--- a/src/options/components/ui/Notifications/notifications.pcss
+++ b/src/options/components/ui/Notifications/notifications.pcss
@@ -48,10 +48,11 @@
         padding: 12px;
         border-radius: 4px;
         background-color: var(--fills-snacks-mobile-snacks-default);
-        animation: notify-show 0.3s ease-in-out;
+        animation: notify-show 0.3s ease-in-out both;
+        will-change: opacity, transform;
 
         &--closed {
-            animation: notify-hide 0.3s ease-in-out;
+            animation: notify-hide 0.3s ease-in-out both;
         }
 
         &--success {
